--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-card-flip": "^0.2.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-loading": "^2.0.3",
     "react-typewriter": "^0.4.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
