--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gsap": "^2.0.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jquery": "^3.3.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -38,6 +39,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "react-loading": "^2.0.3",
+    "react-router": "^3.0.2",
     "react-typewriter": "^0.4.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
