--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "formik": "^1.4.1",
     "fs-extra": "3.0.1",
     "gsap": "^2.0.2",
     "html-webpack-plugin": "2.29.0",
+    "imagesloaded": "^4.1.4",
+    "isotope-layout": "^3.0.6",
     "jest": "20.0.4",
-    "jquery": "^3.3.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
